Fluent validation eklendi, ilk test yapıldı.

--- a/KuaforRandevuAPI.Business/KuaforRandevuAPI.Business.csproj
+++ b/KuaforRandevuAPI.Business/KuaforRandevuAPI.Business.csproj
@@ -7,8 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.1.1" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\KuaforRandevuAPI.Common\KuaforRandevuAPI.Common.csproj" />
     <ProjectReference Include="..\KuaforRandevuAPI.DataAccess\KuaforRandevuAPI.DataAccess.csproj" />
+    <ProjectReference Include="..\KuaforRandevuAPI.Dtos\KuaforRandevuAPI.Dtos.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Mappings\Profiles\" />
   </ItemGroup>
 
 </Project>
