Reservation API hazırlandı

--- a/KuaforRandevuAPI.Dtos/KuaforRandevuAPI.Dtos.csproj
+++ b/KuaforRandevuAPI.Dtos/KuaforRandevuAPI.Dtos.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KuaforRandevuAPI.Common\KuaforRandevuAPI.Common.csproj" />
+    <ProjectReference Include="..\KuaforRandevuAPI.Entities\KuaforRandevuAPI.Entities.csproj" />
   </ItemGroup>
 
 </Project>
